<resources>
    <string name="app_name">Sky Note Job</string>
    <string name="Login">Login</string>
    <string name="User_Name">Email</string>
    <string name="User_Pass">Password</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string name="action_profile">My Profile</string>
    <string name="action_help">help</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="pass">Password</string>
    <string name="Email">Email</string>
    <string name="Status">Status</string>
    <string name="Address">Address</string>
    <string name="Mobile_Phone">Mobile Phone</string>
    <string name="Word_Phone">Word Phone</string>
    <string name="change_profile">Change Profile</string>
    <string name="update">UpDate</string>
    <string name="avatar_user">Avatar User</string>
    <string name="pages">Pages</string>
    <string name="news">News</string>
    <string name="notes">Notes</string>
    <string name="remember">Remember</string>
    <string name="contact">Contact</string>
    <string name="add">Add</string>
    <string name="Plus_Contact">Plus Contact</string>
    <string name="Member">Member</string>
    <string name="Admin">Admin</string>
    <string name="Plus">Plus</string>
    <string name="Add_Contact">Add Contact</string>
    <string name="Send_Message">Send Message</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_First_Name">Enter the First Name</string>
    <string name="err_msg_Last_Name">Enter the Last Name</string>
    <string name="err_msg_Phone">Enter the Phone</string>
    <string name="err_msg_message">Enter the Message</string>
    <string name="wait">Please Wait &#8230;</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="Send_Mail">Send Mail</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="Send_mail">Send Mail to </string>
    <string name="Send_mail_from_your_app">Send Mail from your App</string>
    <string name="Send_message_from_your_app">Send Message from your App</string>
    <string name="Send_SMS">Send SMS to </string>
    <string name="Send_sms">Send SMS </string>
    <string name="English">English</string>
    <string name="Greece">Greece</string>
    <string name="Message_sent">Message sent !!!</string>
    <string name="error_send_mail">There are no email clients installed.</string>
    <string name="SendMail">Send mail &#8230;</string>
    <string name="error_sms">Please fill in the phone and the message to send</string>
    <string name="My_Notes">My Notes</string>
    <string name="date">Date</string>
    <string name="member">Member</string>
    <string name="color">Color</string>
    <string name="lever">Lever</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="regular">Regular</string>
    <string name="emergency">Emergency</string>
    <string name="important">Important</string>
    <string name="reminder">Reminder</string>
    <string name="primary">Primary</string>
    <string name="success">Success</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="danger">Danger</string>
    <string name="Header">Header</string>
    <string name="time">Time</string>
    <string name="remember_member">Remember this Member</string>
    <string name="UserName">UserName</string>
    <string name="UserJob">UserJob</string>
    <string name="ForTo">ForTo</string>
    <string name="Prabesh">Prabeesh</string>
    <string name="email_OR_phone">Email OR Phone</string>
    <string name="write_message">Write Message</string>
    <string name="Add_Notes">Add Notes</string>
    <string name="Add_Remember">Add Remember</string>
    <string name="Admin_Mail">Admin Mail</string>
    <string name="pref_units_label">Select a Language</string>
    <string name="pref_units_label_english">English</string>
    <string name="pref_units_label_greece">Greece</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_english" translatable="false">English</string>
    <string name="pref_units_greece">Greece</string>
    <string name="error_null_time_date">The Time OR Date is empty</string>
    <string name="cancel">Cancel</string>
    <string name="Name">Name</string>
    <string name="Mail">Mail</string>
    <string name="Job">Job</string>
    <string name="Error">Error</string>
    <string name="Uprgade">Upgrade</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="Mobile_Phone_send">Mobile Phone to Send</string>
    <string name="Mail_to_send">Mail to Send</string>
    <string name="My_phone">My Mobile Phone : \n</string>
    <string name="My_mail">My Mail : \n</string>
    <string name="Log_Out">Log Out</string>
    <string name="Exit_from_the_app">Exit from the App</string>
    <string name="exit_question">Are you sure you want to exit?</string>
    <string name="Login_Information">Login Information &#8230;</string>
    <string name="Change_Note">Change Note</string>
    <string name="Change_Remember">Change Remember</string>
    <string name="Notes_Change">Notes Change</string>
    <string name="Add_New_Note">Add New Note</string>
    <string name="Add_New_Remember">Add New\nRemember</string>
    <string name="Remember_to">Remember to</string>
    <string name="by">by</string>
    <string name="For">For</string>
    <string name="Delete_Notes">Delete Notes !!!</string>
    <string name="Delete_Remember">Delete Remember !!!</string>
    <string name="Delete_Note_question">Do you want to Delete this Note ?</string>
    <string name="Delete_Remember_question">Do you want to Delete this Remember ?</string>
    <string name="Just_Wait">Just Wait &#8230;</string>
    <string name="written">Written to :</string>
    <string name="action">Action :</string>
    <string name="Show_Password">Show Password</string>
    <string name="OK_button">OK</string>
    <string name="myCoolButton">If you finish press the OK</string>
    <string name="Ok_Settings" translatable="false" >OK Settings</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Your_mail">Your Mail</string>
    <string name="Mail_Login_Title">Please fill the empty to send Mail to Admin</string>
    <string name="forgot_Login_Title">Forgot Password  Please fill the empty to get your password with Mail from Admin</string>
    <string name="Not_Internet">You have NOT connect to internet</string>
    <string name="connection_lost"> Connection Lost </string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="back"> Back </string>
    <string name="Mail_error"> There are no email clients installed </string>
    <string name="No_remember"> You have Not Remember for Today </string>
    <string name="Yes_remember"> Remember for Today </string>
    <string name="medium" translatable="false">medium</string>
    <string name="remember_you">You have Remember</string>
    <string name="remember_you_text">You have 1 or more Remember \n\n You want to see the reminders which has attached \n or which have attachments are your collaborators for you</string>
    <string name="Close_remember">Close Remember</string>
    <string name="show_remember">Show Remember</string>
    <string name="fa_glass">&#xf000;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envelope_o">&#xf003;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_star_o">&#xf006;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_film">&#xf008;</string>
    <string name="fa_th_large">&#xf009;</string>
    <string name="fa_th">&#xf00a;</string>
    <string name="fa_th_list">&#xf00b;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_close">&#xf00d;</string>
    <string name="fa_remove">&#xf00d;</string>
    <string name="fa_search_plus">&#xf00e;</string>
    <string name="fa_search_minus">&#xf010;</string>
    <string name="fa_power_off">&#xf011;</string>
    <string name="fa_signal">&#xf012;</string>
    <string name="fa_cog">&#xf013;</string>
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_trash_o">&#xf014;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_file_o">&#xf016;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_road">&#xf018;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_arrow_circle_o_down">&#xf01a;</string>
    <string name="fa_arrow_circle_o_up">&#xf01b;</string>
    <string name="fa_inbox">&#xf01c;</string>
    <string name="fa_play_circle_o">&#xf01d;</string>
    <string name="fa_repeat">&#xf01e;</string>
    <string name="fa_rotate_right">&#xf01e;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_list_alt">&#xf022;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_flag">&#xf024;</string>
    <string name="fa_headphones">&#xf025;</string>
    <string name="fa_volume_off">&#xf026;</string>
    <string name="fa_volume_down">&#xf027;</string>
    <string name="fa_volume_up">&#xf028;</string>
    <string name="fa_qrcode">&#xf029;</string>
    <string name="fa_barcode">&#xf02a;</string>
    <string name="fa_tag">&#xf02b;</string>
    <string name="fa_tags">&#xf02c;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_bookmark">&#xf02e;</string>
    <string name="fa_print">&#xf02f;</string>
    <string name="fa_camera">&#xf030;</string>
    <string name="fa_font">&#xf031;</string>
    <string name="fa_bold">&#xf032;</string>
    <string name="fa_italic">&#xf033;</string>
    <string name="fa_text_height">&#xf034;</string>
    <string name="fa_text_width">&#xf035;</string>
    <string name="fa_align_left">&#xf036;</string>
    <string name="fa_align_center">&#xf037;</string>
    <string name="fa_align_right">&#xf038;</string>
    <string name="fa_align_justify">&#xf039;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_outdent">&#xf03b;</string>
    <string name="fa_dedent">&#xf03b;</string>
    <string name="fa_indent">&#xf03c;</string>
    <string name="fa_video_camera">&#xf03d;</string>
    <string name="fa_picture_o">&#xf03e;</string>
    <string name="fa_image">&#xf03e;</string>
    <string name="fa_photo">&#xf03e;</string>
    <string name="fa_pencil">&#xf040;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_adjust">&#xf042;</string>
    <string name="fa_tint">&#xf043;</string>
    <string name="fa_pencil_square_o">&#xf044;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_share_square_o">&#xf045;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_arrows">&#xf047;</string>
    <string name="fa_step_backward">&#xf048;</string>
    <string name="fa_fast_backward">&#xf049;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_play">&#xf04b;</string>
    <string name="fa_pause">&#xf04c;</string>
    <string name="fa_stop">&#xf04d;</string>
    <string name="fa_forward">&#xf04e;</string>
    <string name="fa_fast_forward">&#xf050;</string>
    <string name="fa_step_forward">&#xf051;</string>
</resources>