<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:id="@+id/location_key"
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:id="@+id/Language"
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_english"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options" />

    <CheckBoxPreference
        android:key="pref_sync"
        android:title="@string/Address"
        android:summary="@string/pref_location_default"
        android:defaultValue="true" />

    <Preference android:title="@string/OK_button"
        android:key="@string/Ok_Settings"
        android:summary="@string/myCoolButton"/>


</PreferenceScreen>