<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item1"
        android:title="@string/action_share"
        android:icon="@drawable/worldwide"
        android:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/action_map"
        android:title="@string/action_map"
        app:showAsAction="never" />


    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item android:id="@+id/submenu"
        android:title="submenu_title"
        android:orderInCategory="4"
        android:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_lo"
                android:title="@string/action_logout"
                app:showAsAction="never" />

            <item android:id="@+id/action_he"
                android:title="@string/action_help"
                app:showAsAction="never" />
        </menu>
    </item>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="3"
        app:showAsAction="never" />

</menu>