<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.antrosgeor.skynotejob.Show_Notes">

        <TextView
            android:id="@+id/Text_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:layout_below="@+id/note_header"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ScrollView
            android:id="@+id/ScrollView_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/Text_Title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/lever"
            android:layout_alignEnd="@+id/lever"
            android:layout_above="@+id/lever">

            <TextView
                android:id="@+id/body"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/body" />

        </ScrollView>

        <TextView
            android:id="@+id/lever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lever"
            android:layout_alignTop="@+id/date"
            android:layout_alignRight="@+id/member"
            android:layout_alignEnd="@+id/member"
            android:layout_alignLeft="@+id/delete"
            android:layout_alignStart="@+id/delete"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/member"
            android:layout_above="@+id/change"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/date"
            android:layout_above="@+id/member"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="20dp"
            android:layout_marginBottom="32dp" />

        <TextView
            android:id="@+id/note_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/My_Notes"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/change"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/note_header"
            android:layout_toStartOf="@+id/note_header"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/change"
            android:background="@drawable/button_design"
            android:textColor="@color/ColorWhite"
            android:onClick="ChangeNote"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/change"
            android:layout_alignRight="@+id/member"
            android:layout_alignEnd="@+id/member"
            android:layout_toRightOf="@+id/note_header"
            android:layout_toEndOf="@+id/note_header"
            android:onClick="DeleteNote"
            android:background="@drawable/button_danger_design"
            android:textColor="@color/ColorWhite"
            android:text="@string/delete"/>

    </RelativeLayout>
</ScrollView>
